--- a/plugin.yml
+++ b/plugin.yml
@@ -1,14 +1,16 @@
 name: FasterChest
 main: cosmoverse\fasterchest\Loader
 api: 5.0.0
-version: 0.0.1
+version: 2.0.0-beta
 author: Muqsit
+
 commands:
   fasterchest:
-    description: Convert or revert chests in worlds between vanilla chests and faster chests
+    description: FasterChest management commands
     usage: /fasterchest convert/revert <world>
     permission: fasterchest.command.fasterchest
     aliases: ["fasterchests"]
+
 permissions:
   fasterchest.command.fasterchest:
     description: Ability to use /fasterchest command
